//
// DISCLAIMER
//
// Copyright 2026 ArangoDB GmbH, Cologne, Germany
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Copyright holder is ArangoDB GmbH, Cologne, Germany
//

syntax = "proto3";

package authorization;

import "integrations/authorization/v1/definition/effect.proto";

option go_package = "github.com/arangodb/kube-arangodb/integrations/authorization/v1/definition";

// AuthorizationV1PermissionRequest request for the Permission evaluation request
message AuthorizationV1PermissionRequest {
  // Defines the User
  string user = 1;

  // Defines the list of roles
  repeated string roles = 2;

  // Defines the action
  string action = 3;

  // Defines the resource
  string resource = 4;

  // request context
  optional AuthorizationV1PermissionRequestContext context = 5;
}

// AuthorizationV1PermissionResponse request for the Permission evaluation response
message AuthorizationV1PermissionResponse {
  // Message of the Permission evaluation
  string message = 1;

  // Effect of the permission evaluation
  AuthorizationV1Effect effect = 2;
}

// AuthorizationV1PermissionManyRequest request for the list Permission evaluation request
message AuthorizationV1PermissionManyRequest {
  // Defines the User
  string user = 1;

  // Defines the list of roles
  repeated string roles = 2;
  
  // Defines list of check actions
  repeated AuthorizationV1PermissionManyRequestItem items = 3;
}

// AuthorizationV1PermissionManyRequestItem request for the single item of evaluation
message AuthorizationV1PermissionManyRequestItem {
  // Defines the action
  string action = 1;

  // Defines the resource
  string resource = 2;

  // request context
  optional AuthorizationV1PermissionRequestContext context = 3;
}

// AuthorizationV1PermissionManyResponse request for the list Permission evaluation request
message AuthorizationV1PermissionManyResponse {
  // Message of the Permission evaluation
  string message = 1;

  // Effect of the permission evaluation
  AuthorizationV1Effect effect = 2;

  // List of the request items
  repeated AuthorizationV1PermissionResponse items = 3;
}

// AuthorizationV1PermissionRequest request for the Permission evaluation request
message AuthorizationV1PermissionTokenRequest {
  // Defines the Token
  string token = 1;

  // Defines the action
  string action = 2;

  // Defines the resource
  string resource = 3;

  // request context
  optional AuthorizationV1PermissionRequestContext context = 4;
}

// AuthorizationV1PermissionManyRequest request for the list Permission evaluation request
message AuthorizationV1PermissionTokenManyRequest {
  // Defines the Token
  string token = 1;

  // Defines list of check actions
  repeated AuthorizationV1PermissionManyRequestItem items = 2;
}

// Request context
message AuthorizationV1PermissionRequestContext {
  // Keeps the list of the context parameters
  map<string, AuthorizationV1PermissionRequestContextParameter> parameters = 1;
}

// Request context parameter
message AuthorizationV1PermissionRequestContextParameter {
  // keeps the context values
  repeated string values = 1;
}